Continued debugging, 5 more tests to fix